resolved home button breakage on mobile tablet view

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -325,7 +325,20 @@ a.list-group-item-dash:hover,
 .app-wrap{width:100%;max-width:initial;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;justify-content:space-between;margin-top:1.625rem;}
 .app-container{width:100%;display:flex;flex-wrap:wrap;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;justify-content:space-between;}
 div.app-text-container > h3{color:#fff;font-weight:300;font-size:0.8125rem;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;margin-bottom:1.25rem;}
-.btn-home-profiles{position:absolute;font-size:12px;font-weight:500;top:75px;left:0px;padding:2px 10px;background-color:#fafafa;border-radius:6px;-webkit-box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);-moz-box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);}
+.btn-home-profiles {
+	position: absolute;
+	font-family: 'Source Code Pro', monospace;
+	font-size: 11px;
+	font-weight: 400;
+	top: 0px;
+	right: 0;
+	padding: 3px 20px;
+	background-color: #fafafa;
+	border-radius: 6px;
+	-webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.10);
+	-moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.10);
+	box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.10);
+}
 .btn-home-pageheader{position:absolute;font-size:11px;font-weight:400;color:rgba(255,255,255,0.85);top:15px;left:15px;padding:3px 20px;background-color:rgba(255,255,255,0.15);border-radius:6px;-webkit-box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);-moz-box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);}
 
 
@@ -363,6 +376,7 @@ div.ReactModal__Content.ReactModal__Content--after-open{width:465px;background-c
 	.app-wrap{width:95%;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;justify-content:space-between;align-items:center;}
 	.app-container{width:100%;display:flex;flex-wrap:wrap;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;justify-content:space-between;}
 	div.app-text-container > h3{font-size:1.375rem;margin-bottom:1.75rem;}
+ .btn-home-profiles{top:75px;left:0px;right:auto;}
 }
 
 /* Medium devices (desktops, 975px and up) */
